Add DemoLauncher from afester (#1151)